--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -2,7 +2,7 @@
 <style type="text/css">
 	#mainPopup {
 		padding: 10px;
-		height: 200px;
+		height: 150px;
 		width: 400px;
 		font-family: Helvetica, Ubuntu, Arial, sans-serif;
 	}
@@ -12,7 +12,8 @@
 </style>
 
 <div id="mainPopup">
-<h1>Hello extensionizr!</h1>
-<p>To shut this popup down, edit the manifest file and remove the "default popup" key. To edit it, just edit ext/browser_action/browser_action.html. The CSS is there, too.</p>
-<div>Icons made by <a href="https://www.flaticon.com/authors/apien" title="apien">apien</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+<h1>Github Conventional Comments</h1>
+<p>This project was developed by a group of individuals at Planview Inc. during a hack-a-thon.</p>
+<div>More more information: <a href="https://www.conventionalcommits.org/en/v1.0.0/" title="conventionalcommits">conventionalcommits</a></div>
+<button id="go-to-options">Go to options</button>
 </div>
