Added basic option control to options page

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -11,5 +11,7 @@
 			<p>This is an option page</p>
 		</div>
 	</body>
+	<textarea id="labels"></textarea>
+	<ul id="list"></ul>
 	<script src="options.js"></script>
 </html>
