--- a/src/options/options.html
+++ b/src/options/options.html
@@ -2,16 +2,12 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="button.css">
+		<link rel="stylesheet" href="options.css">
 	</head>
-	<body>
-		<div id="buttonDiv">
-
-		</div>
-		<div>
-			<p>This is an option page</p>
-		</div>
-	</body>
-	<textarea id="labels"></textarea>
+	<div class="container">
+		<input type="text" placeholder="new item" />
+		<button>+ add item</button>
+	  </div>
 	<ul id="list"></ul>
 	<script src="options.js"></script>
 </html>
