Add some basic styles for the options page

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -4,10 +4,15 @@
 		<link rel="stylesheet" href="button.css">
 		<link rel="stylesheet" href="options.css">
 	</head>
-	<div class="container">
-		<input type="text" placeholder="new item" />
-		<button>+ add item</button>
-	  </div>
-	<ul id="list"></ul>
-	<script src="options.js"></script>
+	<body>
+		<h1>Github Conventional Comments</h1>
+		<div class="Options-addItemWrapper">
+			<div class="Options-actionsWrapper">
+				<input type="text" placeholder="new item" />
+				<button>+ add item</button>
+			</div>
+			<ul id="list"></ul>
+		</div>
+		<script src="options.js"></script>
+	</body>
 </html>
