Added sorting labels, title-case when listed, and lowercase when injected

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -13,6 +13,7 @@
 			</div>
 			<ul id="list"></ul>
 		</div>
+		<script src="../inject/helpers.js"></script>
 		<script src="options.js"></script>
 	</body>
 </html>
