--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<link rel="stylesheet" href="button.css">
 		<link rel="stylesheet" href="options.css">
 	</head>
@@ -9,7 +10,8 @@
 		<div class="Options-addItemWrapper">
 			<div class="Options-actionsWrapper">
 				<input type="text" placeholder="new item" />
-				<button>+ add item</button>
+				<button class="options-add">add</button>
+				<button class="options-restore">restore</button>
 			</div>
 			<ul id="list"></ul>
 		</div>
